--- a/src/assets/scss/main.scss
+++ b/src/assets/scss/main.scss
@@ -49,7 +49,7 @@
 $size-header-width: 35%;
 $size-header-pad: 4em;
 
-/* Spans */
+/* Search */
 .projectSearch {
   display: flex;
   .title {
@@ -1395,6 +1395,15 @@ body.is-touch {
 
 @include breakpoint(small) {
   $size-header-pad: 1.5em;
+
+  /* Search */
+  .projectSearch {
+    display: block;
+    .title {
+      white-space: nowrap;
+      padding-right: 1em;
+    }
+  }
 
   /* Basic */
 
