WiP: Dynamically Render Icons

--- a/src/assets/scss/main.scss
+++ b/src/assets/scss/main.scss
@@ -50,7 +50,7 @@ $size-header-width: 35%;
 $size-header-pad: 4em;
 
 /* Search */
-.projectSearch {
+span {
   display: flex;
   .title {
     white-space: nowrap;
