--- a/src/assets/scss/main.scss
+++ b/src/assets/scss/main.scss
@@ -64,7 +64,13 @@ span {
 
 .projectDisplay {
   display: flex;
+  flex-flow: row;
+  width: 98%;
+  justify-content: center;
   .projectImages {
+    width: 66%;
+  }
+  .projectDetails {
     width: 33%;
   }
 }
