--- a/src/assets/scss/main.scss
+++ b/src/assets/scss/main.scss
@@ -4,6 +4,9 @@
 @import '../css/font-awesome.min.css';
 @import url('https://fonts.googleapis.com/css?family=Source+Sans+Pro:400,400italic');
 
+/* Additions by CPrystupa */
+@import './gallery.scss';
+
 /*
 	Strata by HTML5 UP
 	html5up.net | @ajlkn
@@ -49,33 +52,6 @@
 $size-header-width: 35%;
 $size-header-pad: 4em;
 
-/* Search */
-span {
-  display: flex;
-  .title {
-    white-space: nowrap;
-    padding-right: 1em;
-  }
-}
-
-.stackIco {
-  margin: 0px 3px 0px 3px;
-}
-// @import './modal.scss';
-/* 
-.projectDisplay {
-  display: flex;
-  flex-flow: row;
-  width: 98%;
-  justify-content: center;
-  .projectImages {
-    width: 66%;
-  }
-  .projectDetails {
-    width: 33%;
-  }
-}
- */
 /* Basic */
 body {
   background: _palette(bg);
