--- a/src/assets/scss/gallery.scss
+++ b/src/assets/scss/gallery.scss
@@ -30,5 +30,25 @@ span {
     * > * {
       color: white;
     }
+    h4 {
+      font-size: 1.25rem;
+    }
+    table {
+      font-size: 1.5rem;
+      margin-bottom: 0;
+      ul {
+        margin-bottom: 0;
+      }
+      th {
+        font-weight: bold;
+        padding-bottom: 0;
+      }
+      td {
+        padding-top: 0.75rem;
+      }
+    }
+    p {
+      font-size: 1.25rem;
+    }
   }
 }
