WiP Responsive modal

--- a/src/assets/scss/main.scss
+++ b/src/assets/scss/main.scss
@@ -1299,6 +1299,9 @@ body.is-touch {
 @include breakpoint(medium) {
   $size-header-pad: 4em;
 
+  .projectDisplay {
+    flex-direction: column;
+  }
   /* Basic */
 
   h1,
