WiP Responsive modal

--- a/src/assets/scss/main.scss
+++ b/src/assets/scss/main.scss
@@ -1301,6 +1301,11 @@ body.is-touch {
 
   .projectDisplay {
     flex-direction: column;
+    .projectImages {
+      align-self: center;
+    }
+    table {
+    }
   }
   /* Basic */
 
