--- a/src/assets/scss/main.scss
+++ b/src/assets/scss/main.scss
@@ -841,7 +841,7 @@ input[type='button'],
   background-color: transparent;
   border-radius: _size(border-radius);
   border: solid 3px _palette(border);
-  color: _palette(fg-bold) !important;
+  color: _palette(fg-bold);
   cursor: pointer;
   display: inline-block;
   font-weight: _font(weight-bold);
