Add Demo and Long Desc Details

--- a/src/assets/scss/gallery.scss
+++ b/src/assets/scss/gallery.scss
@@ -54,7 +54,7 @@ span {
     p {
       font-size: 1.25rem;
     }
-    .detailButton {
+    .detailButtons {
       justify-content: space-around;
     }
   }
