Adj close btn color

--- a/src/assets/scss/gallery.scss
+++ b/src/assets/scss/gallery.scss
@@ -59,11 +59,10 @@ span {
     }
   }
   .closeDetails {
-    color: black;
+    color: rgb(44, 43, 43);
     font-size: 2rem;
-    background-color: rgb(252, 54, 54);
+    background-color: rgb(255, 92, 92);
     border-radius: 50%;
-    border: 0px solid red;
     padding: 0.25rem;
     position: fixed;
     top: 1rem;
