--- a/src/assets/scss/gallery.scss
+++ b/src/assets/scss/gallery.scss
@@ -14,18 +14,22 @@ span {
 .projectDisplay {
   display: flex;
   flex-flow: row;
-  width: 98%;
+  width: 98vw;
+  height: 98vh;
   justify-content: center;
   .projectImages {
-    width: 66%;
+    width: 66;
     justify-content: center;
+    align-items: center;
     display: inherit;
     img {
       width: 90%;
+      height: 50vh;
     }
   }
   .projectDetails {
-    width: 33%;
+    align-self: center;
+    width: 33vw;
     *,
     * > * {
       color: white;
@@ -34,7 +38,7 @@ span {
       font-size: 1.25rem;
     }
     table {
-      font-size: 1.5rem;
+      font-size: 1rem;
       margin-bottom: 0;
       tr {
         background-color: transparent;
@@ -62,7 +66,7 @@ span {
     color: rgb(44, 43, 43);
     font-size: 2rem;
     background-color: rgb(255, 92, 92);
-    border-radius: 50%;
+    border-radius: 15%;
     padding: 0.25rem;
     position: fixed;
     top: 1rem;
