Scroll for project details
Changed Flex flow and overflow in css

--- a/src/assets/scss/main.scss
+++ b/src/assets/scss/main.scss
@@ -1301,6 +1301,8 @@ body.is-touch {
 
   .projectDisplay {
     flex-direction: column;
+    overflow: scroll;
+    flex-flow: wrap;
     .projectImages {
       align-self: center;
       width: 95vw;
