Style Scroll to top btn

--- a/src/assets/scss/gallery.scss
+++ b/src/assets/scss/gallery.scss
@@ -66,6 +66,7 @@ span {
     color: rgb(44, 43, 43);
     font-size: 2rem;
     background-color: rgb(255, 92, 92);
+    opacity: 60%;
     border-radius: 15%;
     padding: 0.25rem;
     position: fixed;
