--- a/src/assets/scss/main.scss
+++ b/src/assets/scss/main.scss
@@ -52,6 +52,23 @@
 $size-header-width: 35%;
 $size-header-pad: 4em;
 
+#topButton {
+  position: fixed;
+  right: 1rem;
+  bottom: 1rem;
+  color: white;
+  font-size: 1rem;
+  background-color: red;
+  opacity: 60%;
+  border-radius: 15%;
+  border: 0px solid red;
+  padding: 0.5rem;
+  display: none;
+}
+#topButton:hover {
+  opacity: 90%;
+}
+
 /* Basic */
 body {
   background: _palette(bg);
