Scroll button hides @ top

--- a/src/assets/scss/main.scss
+++ b/src/assets/scss/main.scss
@@ -63,7 +63,7 @@ $size-header-pad: 4em;
   border-radius: 15%;
   border: 0px solid red;
   padding: 0.5rem;
-  display: none;
+  // display: none;
 }
 #topButton:hover {
   opacity: 90%;
