Update email and address

--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -16,7 +16,7 @@
         </a>
       </li>
       <li>
-        <a href="mailto:charles.prystupa@gmail.com" class="icon fa-envelope-o">
+        <a href="mailto:Chuck@CPrystupa.com" class="icon fa-envelope-o">
           <span class="label">Email</span>
         </a>
       </li>
