--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -9,7 +9,7 @@ interface Props {
 
 const { 
   title = "Chuck Prystupa - Web Developer",
-  description = "Portfolio of Chuck Prystupa, full-stack web developer with a background in IT. Located in Cambridge Ontario, of the Kitchener-Waterloo region, experienced with remote development."
+  description = "Portfolio of Chuck Prystupa, full-stack web developer with a background in IT. Located in Waterloo Region, Ontario, experienced with remote development."
 } = Astro.props;
 ---
 
