--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -99,13 +99,13 @@ import ScrollToTop from '../components/ScrollToTop';
               <h3 class="icon fa-envelope-o">
                 <span class="label">Email</span>
               </h3>
-              <a href="mailto:charles.prystupa@gmail.com">charles.prystupa@gmail.com</a>
+              <a href="mailto:Chuck@CPrystupa.com">Chuck@CPrystupa.com</a>
             </li>
             <li>
               <h3 class="icon fa-home">
                 <span class="label">Address</span>
               </h3>
-              Kitchener-Waterloo, Ontario
+              Waterloo Region, Ontario
               <br />
               Canada
             </li>
